--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <ion-app>
+  <ion-split-pane contentId="main-content">
+    <ion-menu>
+      <app-menu></app-menu>
+    </ion-menu>
+
+  </ion-split-pane>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
