--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
-    <ion-menu>
+    <ion-menu contentId="main-content" type="overlay">
       <app-menu></app-menu>
     </ion-menu>
-
+    <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
-  <ion-router-outlet></ion-router-outlet>
 </ion-app>
