commencement de la doglist

--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -12,14 +12,14 @@
     </ion-item>
   </ion-menu-toggle>
   <ion-menu-toggle auto-hide="false">
-    <ion-item [routerLink]="['/doglist']">
-      <ion-icon name="people" slot="start"></ion-icon>
+    <ion-item [routerLink]="['/dog-list']">
+      <ion-icon name="grid-outline" slot="start"></ion-icon>
       <ion-label>Liste des chiens</ion-label>
     </ion-item>
   </ion-menu-toggle>
   <ion-menu-toggle auto-hide="false">
     <ion-item [routerLink]="['/adddog']">
-      <ion-icon name="people" slot="start"></ion-icon>
+      <ion-icon name="add-circle-outline" slot="start"></ion-icon>
       <ion-label>Ajouter un chien</ion-label>
     </ion-item>
   </ion-menu-toggle>
