--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,41 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Accueil</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Accueil</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list id="container" lines="none" style="text-align: center;">
+    <ion-item style="text-align: center; --background: transparent;">
+      <ion-label>
+        <ion-img src="assets/images/groupDog.jpg" alt="groupe de chien" />
+        <strong>Doggy l'application qui a du chien !</strong>
+        <h3>Bienvenue sur Doggy !</h3>
+        <p>
+          L'application qui vous permet de consulter une liste de chiens situés dans différents endroits, et de
+          rajouter votre propre chien à cette liste.
+        </p>
+      </ion-label>
+    </ion-item>
+    <ion-item style="text-align: center; --background: transparent;">
+      <ion-label>
+        <h3>
+          Voici une image de chien aléatoire pour te faire les dents
+        </h3>
+        <ion-img [src]="imgDog" alt="chien aléatoire"/>
+        <ion-button (click)="RandomImage()">
+          Random
+        </ion-button>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
