--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,38 @@
-#container {
+
+strong{
+  line-height: 40px;
+}
+
+ion-header {
+  --background: #333; 
+  --color: #fff; 
+}
+
+ion-item {
+  --background: transparent; 
+  margin-bottom: 10px;
+  color: #fff; 
+}
+
+
+ion-img {
+  border-radius: 8px;
+  width: 80%;
+  height: 100%;
+  max-width: 500px;
+  display: block;
+  margin: 0 auto 16px;
+}
+
+ion-label {
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-button {
+  margin-top: 16px;
+  --background: #3880ff; 
+  --color: #fff; 
+  --border-radius: 8px;
+  --padding-start: 16px;
+  --padding-end: 16px;
 }
