--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -18,7 +18,7 @@
     </ion-item>
   </ion-menu-toggle>
   <ion-menu-toggle auto-hide="false">
-    <ion-item [routerLink]="['/adddog']">
+    <ion-item [routerLink]="['/add-dog']">
       <ion-icon name="add-circle-outline" slot="start"></ion-icon>
       <ion-label>Ajouter un chien</ion-label>
     </ion-item>
