--- a/src/app/add-dog/add-dog.page.html
+++ b/src/app/add-dog/add-dog.page.html
@@ -35,6 +35,9 @@
     <ion-item>
       <ion-label position="floating">URL de la Photo</ion-label>
       <ion-input formControlName="photo"></ion-input>
+      <ion-button (click)="selectOrCapturePhoto()">
+        <ion-icon name="camera-outline"></ion-icon>
+      </ion-button>
     </ion-item>
 
     <ion-button expand="block" type="submit" [disabled]="!dogForm.valid">Ajouter le Chien</ion-button>
