--- a/src/app/add-dog/add-dog.page.html
+++ b/src/app/add-dog/add-dog.page.html
@@ -34,7 +34,7 @@
 
     <ion-item>
       <ion-label position="floating">URL de la Photo</ion-label>
-      <ion-input formControlName="photo"></ion-input>
+      <ion-input formControlName="photo" type="text"></ion-input>
       <ion-button (click)="selectOrCapturePhoto()">
         <ion-icon name="camera-outline"></ion-icon>
       </ion-button>
