Mise en place de la vibration et d'une alerte pour etre sur de supprimer un chien

--- a/src/app/detail-dog/detail-dog.page.html
+++ b/src/app/detail-dog/detail-dog.page.html
@@ -35,6 +35,6 @@
     </ion-item>
 
     <ion-button expand="full" type="submit" (click)="updateDog()">Modifier</ion-button>
-    <ion-button expand="full" color="danger" (click)="deleteDog()">Supprimer</ion-button>
+    <ion-button expand="full" color="danger" (click)="confirmDelete()">Supprimer</ion-button>
   </form>
 </ion-content>
